--- a/src/css/style.css
+++ b/src/css/style.css
@@ -54,7 +54,7 @@ footer .adress p {
 
 
 @media (max-width: 768px) {
-  .test, footer .navbar {
-    display: block;
+  .content, footer .navbar {
+    flex-wrap: wrap;
   }
 }
